# aiPlays

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-lock.txt
configs/: default.yaml  pokemon_red.yaml
configs/reward_profiles/: exploration.yaml  pokemon_red_progress.yaml
roms/: README.md
scripts/: dashboard.ps1  doctor.ps1  manual-play.ps1  manual.ps1  setup.ps1  test.ps1  train-visible.ps1  train.ps1  watch.ps1
src/aiplays/: __init__.py  __main__.py  actions.py  checkpoints.py  cli.py  config.py  devices.py  observations.py  paths.py  telemetry.py  testing.py
src/aiplays/dashboard/: __init__.py  server.py  state.py
src/aiplays/dashboard/static/: app.js  index.html  styles.css
src/aiplays/envs/: __init__.py  base.py  pokemon_red.py  pyboy_env.py
src/aiplays/ram/: __init__.py  pokemon_red.py  reader.py  verification.py
src/aiplays/rewards/: __init__.py  base.py  composite.py  exploration.py  pokemon_red.py
src/aiplays/training/: __init__.py  callbacks.py  evaluate.py  train.py  wrappers.py
states/: README.md
tests/: test_actions.py  test_config.py  test_dashboard.py  test_environment_contract.py  test_fake_env.py  test_manual_controls.py  test_observations.py  test_rewards.py  test_telemetry_checkpoints.py  test_training_smoke.py
