[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aiplays"
version = "0.1.0"
description = "Local PyBoy + PPO reinforcement learning platform for legally supplied Game Boy ROMs"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
authors = [{name = "aiPlays contributors"}]
dependencies = [
  "pyboy>=2.6,<3",
  "gymnasium>=1.0,<2",
  "stable-baselines3>=2.6,<3",
  "torch>=2.6,<3",
  "numpy>=1.26,<3",
  "opencv-python>=4.10,<5",
  "Pillow>=10,<12",
  "PyYAML>=6,<7",
  "tensorboard>=2.18,<3",
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "psutil>=6,<8",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "pytest-cov>=5,<7", "ruff>=0.8,<1", "mypy>=1.13,<2", "types-PyYAML>=6.0", "httpx2>=2.7"]

[project.scripts]
aiplays = "aiplays.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
warn_unused_configs = true
warn_return_any = false
disallow_untyped_defs = false
ignore_missing_imports = true
